implement notifications for group